--- a/documento/Grupo#27.tex
+++ b/documento/Grupo#27.tex
@@ -43,7 +43,7 @@
 \setlength{\headheight}{40.2pt}
 \pagestyle{fancy}
 \fancyhf{}
-\lhead{\textbf{INGENIERIA DE SOFTWARE I - SC}}\rhead{\textbf{Proyecto Final - Grupo N°1}}
+\lhead{\textbf{INGENIERIA DE SOFTWARE I - SC}}\rhead{\textbf{Examen 2 - Grupo N° 27}}
 \renewcommand{\headrulewidth}{2pt}
 \fancyfoot[R]{\textbf{Página \thepage }} %  |\pageref{LastPage}} 
 %-------------Fin ENCABEZADO ---------------------
@@ -62,7 +62,7 @@
         \centering
         \includegraphics[width=0.4\textwidth]{\logoportada}\par\vspace{0.3cm}
         
-        {\huge\bfseries\textcolor{titulocolor}{Grupo N°1}}\par\vspace{0.1cm}
+        {\huge\bfseries\textcolor{titulocolor}{Grupo N°27}}\par\vspace{0.1cm}
         
         \begin{tcolorbox}[colback=red!5!white,colframe=red!75!black]
             \centering
@@ -78,9 +78,7 @@
         \definecolor{bleudefrance}{rgb}{0.19, 0.55, 0.91}
  
         \hfill  %debes de ajustar el espacio entre la tabla y el QR, no separarlo
-        \begin{minipage}{0.79\textwidth} % 60% del ancho para la información
-                    % Aquí va la tabla de los integrantes
-            \begin{flushleft}
+
                 
                 \begin{longtable}[c]{|l|c|}
                     \hline
@@ -97,14 +95,6 @@
                     \hline
 
                     \end{longtable}
-            \end{flushleft}
-        \end{minipage}
-        \hfill  %debes de ajustar el espacio entre la tabla y el QR, no separarlo
-        \begin{minipage}{0.20\textwidth}  % 30% del ancho para la imagen QR
-            \begin{flushright}
-                \includegraphics[width=\linewidth]{\logoqr}  % Cambia "qr_code.png" por tu archivo de imagen QR
-            \end{flushright}
-        \end{minipage}
 
 
         \vspace{1cm}  % Espacio entre el bloque anterior y el siguiente texto
