--- a/documento/Sprint/1/R-2/a/historia_usuario/HU_5.tex
+++ b/documento/Sprint/1/R-2/a/historia_usuario/HU_5.tex
@@ -9,14 +9,14 @@
     \rowcolor{bleudefrance}
     \multicolumn{5}{|c|}{\color{aliceblue}\Large\textbf{HISTORIA DE USUARIO}}\\
     \hline\rowcolor{white} 
-    \multicolumn{3}{|P{12cm}|}{Sistema Avanzado de Transcripción y Traducción
-     Multilingue para Eventos Presenciales y Multimedia con
-     Inteligencia Artificial} & \multicolumn{2}{c|}{ \raisebox{-\totalheight}{\includegraphics[width=3cm]{\qr}}}\\
+    \multicolumn{3}{|P{12cm}|}{Plataforma Colaborativa para Diseño movil y Generaciñon
+Automática de Código Frontend para FLUTTER e importación
+de imagen prototipos para su diseóo Frontend} & \multicolumn{2}{c|}{ \raisebox{-\totalheight}{\includegraphics[width=3cm]{\qr}}}\\
     \hline
     \rowcolor{bleudefrance} 
     \textbf{\color{aliceblue} ID} & \textbf{\color{aliceblue} Nombre corto de HU} & \textbf{\color{aliceblue} Prioridad} & \textbf{\color{aliceblue} PHU}& \textbf{\color{aliceblue}Estado}  \\
     \hline
-    \rowcolor{lightgray} \textbf{ H.U.5} & \textbf{Cargar audio} & \textbf{Alta} & \textbf{ }& \textbf{Completo} \\
+    \rowcolor{lightgray} \textbf{ H.U.5} & \textbf{Gestión de proyecto} & \textbf{Alta} & \textbf{ }& \textbf{Completo} \\
     \hline
     \endfirsthead
 
@@ -26,9 +26,9 @@
     \rowcolor{bleudefrance}
     \multicolumn{5}{|c|}{\color{aliceblue}\Large\textbf{HISTORIA DE USUARIO}}\\
     \hline\rowcolor{white} 
-    \multicolumn{3}{|P{12cm}|}{Sistema Avanzado de Transcripción y Traducción
-     Multilingue para Eventos Presenciales y Multimedia con
-     Inteligencia Artificial} & \multicolumn{2}{c|}{{\includegraphics[width=3cm]{\qr}}}\\
+    \multicolumn{3}{|P{12cm}|}{Plataforma Colaborativa para Diseño movil y Generaciñon
+Automática de Código Frontend para FLUTTER e importación
+de imagen prototipos para su diseño Frontend} & \multicolumn{2}{c|}{{\includegraphics[width=3cm]{\qr}}}\\
     \hline
     \rowcolor{bleudefrance} 
     \textbf{\color{aliceblue} ID} & \textbf{\color{aliceblue} Nombre corto de HU} & \textbf{\color{aliceblue} Prioridad} & \textbf{\color{aliceblue} PHU}& \textbf{\color{aliceblue}Estado}  \\
@@ -42,18 +42,18 @@
     & \multicolumn{4}{>{\columncolor{white}}l|}{Usuario} \\
     \hline
     \cellcolor{bleudefrance}\textbf{\color{aliceblue} Quiero :} 
-    & \multicolumn{4}{>{\columncolor{white}}l|}{cargar un archivo de audio} \\
+    & \multicolumn{4}{>{\columncolor{white}}l|}{Gestionar los proyecto asignados o creados} \\
     \hline
     \cellcolor{bleudefrance}\textbf{\color{aliceblue} Para :} 
-    & \multicolumn{4}{>{\columncolor{white}}l|}{que 
-    el sistema lo transcriba y traduzca.} \\
+    & \multicolumn{4}{>{\columncolor{white}}l|}{para tener controlado todo los proyecto} \\
     \hline
     \cellcolor{bleudefrance}\textbf{\color{aliceblue} Criterios de aplicación :} & \multicolumn{4}{>{\columncolor{white}}p{14cm}|}{
             \begin{itemize}
-                \item El sistema debe permitir al usuario cargar un archivo de audio.
-                \item El sistema debe permitir al usuario cargar un archivo de audio en formato mp3, WAV.
-                \item El sistema debe permitir al usuario cargar un archivo de audio de hasta 10 MB.
-                \item El sistema debe permitir al usuario cargar un archivo de audio de hasta 10 minutos.
+                \item El sistema debe permitir al usuario crear un nuevo proyecto.
+                \item El sistema debe permitir al usuario eliminar un o varios proyectos.
+                \item El sistema debe permitir al usuario editar nombre del proyecto.
+                \item El sistema debe permitir al usuario agregar colaborador para el proyecto.
+                \item El sistema debe permitir al usuario eliminar colaborador para el proyecto.
                 \end{itemize}
 
             }\\    
@@ -69,7 +69,7 @@
     \multicolumn{5}{|c|}{{\includegraphics[width=13.4cm]{\audio}}}\\
     \hline
     \cellcolor{bleudefrance}\textbf{\color{aliceblue} Desarrollador:} 
-    & \multicolumn{4}{|l|}{GUZMAN HONOR WILSON} \\
+    & \multicolumn{4}{|l|}{RODRIGUEZ VALENCIA JOSE LUIS} \\
     \hline
     \rowcolor{bleudefrance}\multicolumn{5}{|c|}{ }\\
     \hline
