--- a/documento/Sprint/1/R-2/b/Objetivo_sprint_1.tex
+++ b/documento/Sprint/1/R-2/b/Objetivo_sprint_1.tex
@@ -1,17 +1,15 @@
 \begin{doublespace}
     Implementar las funcionalidades básicas de usuario en la aplicación
-    web, incluyendo el registro, inicio de sesión,la interfaz, Inabilitar cuenta y el Cargar audio
-    . Esto permitirá a los usuarios crear una cuenta, iniciar sesión y cargar audio en la aplicación.
+    web, incluyendo el registro, inicio de sesión,la interfaz, gestionar proyecto,
+    .Esto permitirá a los usuarios crear una cuenta, iniciar sesión y gestionar sus proyecto en los que colabora o es administrador.
     \begin{enumerate}
         \item \textbf{Registro de usuario:} Implementar un formulario de registro que permita a los
                 usuarios crear una cuenta en la aplicación.
         \item \textbf{Inicio de sesión:} Implementar un formulario de inicio de sesión que permita a
                 los usuarios acceder a su cuenta.
         \item \textbf{Interfaz de usuario } Implementar una interfaz intuitiva para el usuario.
-        \item \textbf{Inabilitar cuenta:} Implementar una funcionalidad que permita al administrador
-                inhabilitar cuenta de usuario.
-        \item \textbf{Cargar audio:} Implementar una funcionalidad que permita a los usuarios cargar
-                audio en la aplicación.
+        \item \textbf{Gestionar proyecto:} Implementar la gestion de proyecto para el usuario.
+        
     \end{enumerate}
 
 \end{doublespace}
