--- a/documento/Sprint/sprint_1.tex
+++ b/documento/Sprint/sprint_1.tex
@@ -35,13 +35,13 @@
 
 \clearpage  %nueva pagina
 % Usamos \addcontentsline para incluir el paragraph en el índice
-\paragraph{\Large\textbf {Objetivo del Sprint (definido por el Scrum Máster)}}
-\addcontentsline{toc}{paragraph}{Objetivo del Sprint}
+\section{Objetivo del Sprint (definido por el Scrum Máster)}
+
 \subfile{1/R-2/b/Objetivo_sprint_1}
 
 %nueva pagina
-\paragraph{\Large\textbf {Planning Poker (estimación de Puntos)}}
-\addcontentsline{toc}{paragraph}{Planning Poker}
+\section{Planning Poker (estimación de Puntos)}
+
 \subfile{1/R-2/c/Planning_poker}
 
 \clearpage  %nueva pagina
