--- a/documento/Sprint/1/R-2/a/historia_usuario/HU_4.tex
+++ b/documento/Sprint/1/R-2/a/historia_usuario/HU_4.tex
@@ -9,14 +9,14 @@
     \rowcolor{bleudefrance}
     \multicolumn{5}{|c|}{\color{aliceblue}\Large\textbf{HISTORIA DE USUARIO}}\\
     \hline\rowcolor{white} 
-    \multicolumn{3}{|P{12cm}|}{Sistema Avanzado de Transcripción y Traducción
-     Multilingue para Eventos Presenciales y Multimedia con
-     Inteligencia Artificial} & \multicolumn{2}{c|}{ \raisebox{-\totalheight}{\includegraphics[width=3cm]{\qr}}}\\
+    \multicolumn{3}{|P{12cm}|}{Plataforma Colaborativa para Diseño movil y Generaciñon
+Automática de Código Frontend para FLUTTER e importación
+de imagen prototipos para su diseóo Frontend} & \multicolumn{2}{c|}{ \raisebox{-\totalheight}{\includegraphics[width=3cm]{\qr}}}\\
     \hline
     \rowcolor{bleudefrance} 
     \textbf{\color{aliceblue} ID} & \textbf{\color{aliceblue} Nombre corto de HU} & \textbf{\color{aliceblue} Prioridad} & \textbf{\color{aliceblue} PHU}& \textbf{\color{aliceblue}Estado}  \\
     \hline
-    \rowcolor{lightgray} \textbf{ H.U.4} & \textbf{Inabilitar cuenta } & \textbf{Baja} & \textbf{ }& \textbf{Completo} \\
+    \rowcolor{lightgray} \textbf{ H.U.4} & \textbf{Gestión de proyecto} & \textbf{Alta} & \textbf{ }& \textbf{Completo} \\
     \hline
     \endfirsthead
 
@@ -26,32 +26,34 @@
     \rowcolor{bleudefrance}
     \multicolumn{5}{|c|}{\color{aliceblue}\Large\textbf{HISTORIA DE USUARIO}}\\
     \hline\rowcolor{white} 
-    \multicolumn{3}{|P{12cm}|}{Sistema Avanzado de Transcripción y Traducción
-     Multilingue para Eventos Presenciales y Multimedia con
-     Inteligencia Artificial} & \multicolumn{2}{c|}{{\includegraphics[width=3cm]{\qr}}}\\
+    \multicolumn{3}{|P{12cm}|}{Plataforma Colaborativa para Diseño movil y Generaciñon
+Automática de Código Frontend para FLUTTER e importación
+de imagen prototipos para su diseóo Frontend} & \multicolumn{2}{c|}{{\includegraphics[width=3cm]{\qr}}}\\
     \hline
     \rowcolor{bleudefrance} 
     \textbf{\color{aliceblue} ID} & \textbf{\color{aliceblue} Nombre corto de HU} & \textbf{\color{aliceblue} Prioridad} & \textbf{\color{aliceblue} PHU}& \textbf{\color{aliceblue}Estado}  \\
     \hline
-    \rowcolor{lightgray} \textbf{ H.U.4} & \textbf{Inabilitar cuenta } & \textbf{Baja} & \textbf{ }& \textbf{Completo} \\
+    \rowcolor{lightgray} \textbf{ H.U.4} & \textbf{Gestión de proyecto} & \textbf{Alta} & \textbf{ }& \textbf{Completo} \\
     \hline
     \endhead
 
 
-    \cellcolor{bleudefrance}\textbf{\color{aliceblue} Como :} 
-    & \multicolumn{4}{>{\columncolor{white}}l|}{Administrador} \\
+   \cellcolor{bleudefrance}\textbf{\color{aliceblue} Como :} 
+    & \multicolumn{4}{>{\columncolor{white}}l|}{Usuario} \\
     \hline
     \cellcolor{bleudefrance}\textbf{\color{aliceblue} Quiero :} 
-    & \multicolumn{4}{>{\columncolor{white}}l|}{inhabilitar cuentas de usuario} \\
+    & \multicolumn{4}{>{\columncolor{white}}l|}{Gestionar los proyecto asignados o creados} \\
     \hline
     \cellcolor{bleudefrance}\textbf{\color{aliceblue} Para :} 
-    & \multicolumn{4}{>{\columncolor{white}}l|}{dar de baja a usuarios.} \\
+    & \multicolumn{4}{>{\columncolor{white}}l|}{para tener controlado todo los proyecto} \\
     \hline
     \cellcolor{bleudefrance}\textbf{\color{aliceblue} Criterios de aplicación :} & \multicolumn{4}{>{\columncolor{white}}p{14cm}|}{
             \begin{itemize}
-                \item El sistema debe permitir al administrador ver la lista de usuarios.
-                \item El sistema debe permitir al administrador inhabilitar cuentas de usuario.
-                \item El sistema debe permitir al administrador habilitar cuentas de usuario.
+                \item El sistema debe permitir al usuario crear un nuevo proyecto.
+                \item El sistema debe permitir al usuario eliminar un o varios proyectos.
+                \item El sistema debe permitir al usuario editar nombre del proyecto.
+                \item El sistema debe permitir al usuario agregar colaborador para el proyecto.
+                \item El sistema debe permitir al usuario eliminar colaborador para el proyecto.
                 \end{itemize}
 
             }\\    
@@ -67,7 +69,7 @@
     \multicolumn{5}{|c|}{{\includegraphics[width=13.4cm]{\estado}}}\\
     \hline
     \cellcolor{bleudefrance}\textbf{\color{aliceblue} Desarrollador:} 
-    & \multicolumn{4}{|l|}{SOSSA PESOA JUAN ANTONIO} \\
+    & \multicolumn{4}{|l|}{RIBERA SAAVEDRA FRANZ LEONARDO} \\
     \hline
     \rowcolor{bleudefrance}\multicolumn{5}{|c|}{ }\\
     \hline
